(rule
 (targets pp.ml)
 (action
  (write-file %{targets} "let () = Ppxlib.Driver.standalone ()")))

(executable
 (name pp)
 (modules pp)
 (libraries ppx_effects ppxlib))

; -------- Test: `main.ml` --------

; The PPX-dependent executable under test

(executable
 (name main)
 (modules main)
 (preprocess
  (pps ppx_effects)))

; Run the PPX on the `.ml` file

(rule
 (targets main.actual)
 (deps
  (:pp pp.exe)
  (:input main.ml))
 (action
  (run ./%{pp} --impl %{input} -o %{targets})))

; Compare the post-processed output to the .expected file

(rule
 (alias runtest)
 (package ppx_effects)
 (action
  (diff main.expected main.actual)))

; Ensure that the post-processed executable runs correctly

(rule
 (alias runtest)
 (package ppx_effects)
 (action
  (run ./main.exe)))
